resolving-some-frontend-glitches

--- a/libs/ui/src/lib/gallery-view/GalleryView.module.less
+++ b/libs/ui/src/lib/gallery-view/GalleryView.module.less
@@ -1119,6 +1119,7 @@
   p {
     margin: 0;
     font-size: 14px;
+    max-width: 500px;
   }
   .gridAlbum {
     position: relative;
@@ -1216,6 +1217,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    max-width: 500px;
   }
   img {
     margin-top: 12px;
