loads of root :globals found - more to go

--- a/apps/web/components/CrudTable.module.less
+++ b/apps/web/components/CrudTable.module.less
@@ -8,11 +8,12 @@
     margin-left: 10px;
   }
 }
-title {
-  h1 {
-    padding-bottom: 0px;
-  }
-}
+//TODO: make this pure!
+// title {
+//   h1 {
+//     padding-bottom: 0px;
+//   }
+// }
 .notificationBanner {
   margin-bottom: 30px;
 }
