--- a/apps/web/components/Setup/BlockOutOptions/BlockOutOptionsComponents.module.less
+++ b/apps/web/components/Setup/BlockOutOptions/BlockOutOptionsComponents.module.less
@@ -92,11 +92,12 @@
   }
 }
 
-:global {
-  .ant-slider-tooltip {
-    .ant-tooltip-inner,
-    .ant-tooltip-arrow-content {
-      background: #54b2d3;
-    }
-  }
-}
+//TODO: make this pure!
+// :global {
+//   .ant-slider-tooltip {
+//     .ant-tooltip-inner,
+//     .ant-tooltip-arrow-content {
+//       background: #54b2d3;
+//     }
+//   }
+// }
