--- a/apps/web/components/Settings/Calendar/Calendar.module.less
+++ b/apps/web/components/Settings/Calendar/Calendar.module.less
@@ -35,13 +35,14 @@
     }
   }
 }
-:global {
-  .ant-checkbox-wrapper {
-    .ant-checkbox::after {
-      display: none;
-    }
-  }
-}
+//TODO: make this pure!
+// :global {
+//   .ant-checkbox-wrapper {
+//     .ant-checkbox::after {
+//       display: none;
+//     }
+//   }
+// }
 .calendar-settings-configuration {
   .configuration-controls {
     padding-top: 23px;
