--- a/apps/web/components/Setup/TaxRate/TaxRateComponents.module.less
+++ b/apps/web/components/Setup/TaxRate/TaxRateComponents.module.less
@@ -1,10 +1,11 @@
-:global {
-  .ant-table-tbody {
-    tr td {
-      padding: 10px 16px !important;
-    }
-  }
-}
+//TODO: make this pure!
+// :global {
+//   .ant-table-tbody {
+//     tr td {
+//       padding: 10px 16px !important;
+//     }
+//   }
+// }
 
 .advanceCollapse {
   color: #3d3d46;
