--- a/apps/web/pages/marketing/reviews.module.less
+++ b/apps/web/pages/marketing/reviews.module.less
@@ -946,6 +946,7 @@
   margin: 18px 0;
   display: flex;
 }
-:global .ant-tooltip {
-  max-width: 1000px;
-}
+//TODO: make this pure!
+// :global .ant-tooltip {
+//   max-width: 1000px;
+// }
