add changes related to stages column

--- a/apps/web/components/Leads/LeadsStages/LeadsStages.module.less
+++ b/apps/web/components/Leads/LeadsStages/LeadsStages.module.less
@@ -67,6 +67,7 @@
       flex: 1;
       max-width: 250px;
       border-right: 1px solid #0000001a;
+      background: #b8b8c01a;
       &:last-child {
         border-right: unset;
       }
@@ -83,6 +84,7 @@
         display: flex;
         justify-content: space-around;
         margin-bottom: 6px;
+        background: #ffffff;
         &:focus {
           outline: none;
           border: none;
