Purified CSS, commented out violations

--- a/apps/web/pages/setup/settings/referral.module.less
+++ b/apps/web/pages/setup/settings/referral.module.less
@@ -67,9 +67,10 @@
 }
 
 @media screen and (max-width: 767px) {
-  :global .ant-layout {
-    margin: 0 0 20px 0;
-  }
+  //TODO: make this pure!
+  // :global .ant-layout {
+  //   margin: 0 0 20px 0;
+  // }
   .referral-container {
     :global .ant-card-body {
       height: inherit;
