--- a/apps/web/pages/team/report.module.less
+++ b/apps/web/pages/team/report.module.less
@@ -1,8 +1,9 @@
-:global .highcharts-button.highcharts-map-navigation.highcharts-zoom-in,
-:global .highcharts-button.highcharts-map-navigation.highcharts-zoom-out,
-:global .highcharts-credits {
-  display: none;
-}
+//TODO: make this pure!
+// :global .highcharts-button.highcharts-map-navigation.highcharts-zoom-in,
+// :global .highcharts-button.highcharts-map-navigation.highcharts-zoom-out,
+// :global .highcharts-credits {
+//   display: none;
+// }
 
 .card-wrapper {
   background: #fff;
