--- a/apps/web/pages/setup/senders.module.less
+++ b/apps/web/pages/setup/senders.module.less
@@ -136,15 +136,15 @@
       color: #9292a3;
     }
   }
-
 }
 
-:global {
-  .ant-popover-inner-content {
-    padding: 4px 0 10px 0;
-    width: 180px;
-  }
-}
+//TODO: make this pure!
+// :global {
+//   .ant-popover-inner-content {
+//     padding: 4px 0 10px 0;
+//     width: 180px;
+//   }
+// }
 .mailOptionContent {
   font-size: 14px;
   color: #9292a3;
