--- a/libs/ui/src/lib/activities/Activities.module.less
+++ b/libs/ui/src/lib/activities/Activities.module.less
@@ -1,4 +1,36 @@
 .follow-wrapper {
+  .sub-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px 56px 15px 18px;
+    background: #ffffff;
+    border-bottom: 1px solid #f1f1f1;
+    .sub-header-left > div {
+      display: flex;
+      align-items: center;
+      & > div{
+        width: 24px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        &:not(:last-child) {
+          margin-right: 24px;
+        }
+        &.active {
+          color: #54b2d3;
+          :global {
+            svg {
+              path {
+                fill: #54b2d3 !important;
+              }
+            }
+          }
+        }
+      }
+    }
+  }  
   .header {
     display: flex;
     justify-content: flex-end;
