resolving-issues-for-mobile-versions

--- a/libs/ui/src/lib/custom-tab-menu/CustomTabMenu.module.less
+++ b/libs/ui/src/lib/custom-tab-menu/CustomTabMenu.module.less
@@ -138,7 +138,7 @@
   flex-direction: column;
   .mainTabMenuItems {
     width: 100%;
-    margin-top: 60px;
+    margin-top: 0px;
     position: fixed;
     height: 40px;
     z-index: 1;
@@ -198,11 +198,12 @@
     margin-top: 100px;
     background-color: white;
     // z-index: 20;
-    .tabPaneItem {
-      display: none;
-    }
     .active {
       display: block;
+    }
+
+    @media screen and (max-width: 767px) {
+      margin-top: 75px;
     }
   }
 }
