--- a/libs/ui/src/lib/image-viewer/CamUploaderModal.module.less
+++ b/libs/ui/src/lib/image-viewer/CamUploaderModal.module.less
@@ -71,7 +71,7 @@
     }
 
     @media only screen and (orientation: landscape) {
-      overflow: hidden;
+      // overflow: hidden;
       max-width: 100vh;
       min-height: 100vw;
       transform: rotate(90deg);
