--- a/apps/web/components/Leads/LeadsStages/LeadsStages.module.less
+++ b/apps/web/components/Leads/LeadsStages/LeadsStages.module.less
@@ -40,7 +40,7 @@
           letter-spacing: 0.3px;
           text-overflow: ellipsis;
           white-space: nowrap;
-          overflow: hidden;
+          overflow: none;
           font-family: 'Circular-Std-Bold';
           padding: 0;
         }
