--- a/libs/ui/src/lib/gallery-view/GalleryView.module.less
+++ b/libs/ui/src/lib/gallery-view/GalleryView.module.less
@@ -27,11 +27,64 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+
     @media screen and (max-width: 479px) {
       button:first-child {
         padding: unset;
       }
     }
+
+    .filterButton {
+      border: none;
+      padding: 0px;
+    }
+
+    .downloadBtn {
+      margin: 0px;
+    }
+
+    .albumDropdownBtn {
+      :global {
+        .ant-dropdown {
+          padding: 4px 0px;
+          min-width: 200px !important;
+
+          ul {
+            width: 100%;
+            border: 1px solid #f0f0f0;
+            box-shadow: 3px 3px 10px #f0f0f0;
+          }
+
+          .ant-menu-item {
+            display: flex;
+            align-items: center;
+            margin: 0px !important;
+            padding: 0px 8px 0px 4px !important;
+            line-height: 0px;
+
+            > span,
+            > svg {
+              width: 20%;
+              line-height: 0px;
+              margin: 0px;
+            }
+
+            div {
+              width: 80%;
+              padding-right: 4px;
+            }
+
+            &:hover {
+              background-color: #88d2ec29;
+              path {
+                fill: var(--primary-color);
+              }
+            }
+          }
+        }
+      }
+    }
+
     button {
       margin: 0px 10px;
       @media screen and (max-width: 479px) {
@@ -79,17 +132,36 @@
       background: #54b2d3;
       border: none;
       border-radius: 4px;
-      padding: 2px 7px;
+      padding: 4px 7px;
+      height: fit-content;
       font-size: 14px;
       line-height: 22px;
       color: #fff;
       cursor: pointer;
-    }
-    .create-content {
-      padding: 10px !important;
-      .content-item {
-        padding: 5px !important;
+      :global {
+        .ant-popover-inner-content {
+          padding: 10px 0px;
+          width: fit-content;
+          min-width: 170px;
+        }
       }
+      span:last-child {
+        margin-left: 8px;
+      }
+    }
+  }
+}
+.create-content {
+  .content-item {
+    cursor: pointer;
+    padding: 5px 20px;
+
+    > span {
+      margin-right: 5px;
+    }
+
+    &:hover {
+      background-color: #eeeeee;
     }
   }
 }
@@ -109,16 +181,22 @@
   }
 }
 
+.displayNone {
+  display: none !important;
+}
+
 .galleryImgBox {
   display: flex;
   //flex-wrap: wrap;
   overflow: auto;
   margin-bottom: 20px;
+  height: 100%;
+
   .galleryWrap {
-    display: contents;
-    justify-content: center;
-    flex-direction: row;
-    align-items: center;
+    // display: contents;
+    // justify-content: center;
+    // flex-direction: row;
+    // align-items: center;
     position: relative;
     //flex-wrap: wrap;
     :global {
@@ -150,55 +228,35 @@
     }
     .check-wrapper {
       position: absolute;
-      right: 25px;
+      right: 15px;
       top: 10px;
-      visibility: visible;
+      z-index: 1;
+      visibility: hidden;
       svg {
         fill: #000000a6;
       }
     }
-    &:hover {
-      .check-wrapper {
-        position: absolute;
-        right: 25px;
-        top: 10px;
-        visibility: visible;
-        svg {
-          fill: #000000a6;
-        }
-      }
+    &:hover .check-wrapper {
+      visibility: visible;
     }
+
     .albumContainer {
       position: relative;
       margin: 0 12px 0 12px;
       .check-wrapper {
-        position: absolute;
-        right: 25px;
-        top: 10px;
-        z-index: 1;
         visibility: hidden;
-        svg {
-          fill: #000000a6;
-        }
         .dotBtn {
           cursor: pointer;
-          padding: 3px 10px 0 10px;
+          padding: 3px 11px 0 11px;
+          box-shadow: 3px 3px 5px lightgray;
           background-color: white;
           border-radius: 50%;
           height: 100%;
           width: 100%;
         }
       }
-      &:hover {
-        .check-wrapper {
-          position: absolute;
-          right: 25px;
-          top: 10px;
-          visibility: visible;
-          svg {
-            fill: #000000a6;
-          }
-        }
+      &:hover .check-wrapper {
+        visibility: visible;
       }
       .grid-container {
         display: grid;
@@ -214,9 +272,6 @@
           border: 1px solid deepskyblue;
           border-radius: 6px;
           .check-wrapper {
-            position: absolute;
-            right: 25px;
-            top: 10px;
             visibility: visible;
             svg {
               fill: #000000a6;
@@ -224,13 +279,7 @@
           }
         }
         .check-wrapper {
-          position: absolute;
-          right: 25px;
-          top: 10px;
           visibility: hidden;
-          svg {
-            fill: #000000a6;
-          }
         }
         .grid-item {
           width: 70px;
@@ -290,11 +339,27 @@
           color: #3d3d46;
         }
       }
+      .dropable {
+        position: absolute;
+        background-color: transparent;
+        height: 100%;
+        width: 100%;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        border-radius: 6px;
+        cursor: pointer;
+      }
+      :global .dropEffect {
+        background-color: rgba(135, 206, 235, 0.29);
+      }
     }
     .albumInfo {
       text-align: center;
+      padding-top: 5px;
       .albumTitle {
-        font-size: 16px;
+        font-size: 14px;
+        color: var(--grey-text-color);
         margin: 0;
       }
       .albumCount {
@@ -307,135 +372,154 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-  }
 
-  .scrollDiv {
-    max-height: 73vh;
-    padding-bottom: 180px;
-    overflow-y: auto;
-    &::-webkit-scrollbar-track {
-      border-radius: 10px;
-      background-color: transparent;
-    }
-
-    &::-webkit-scrollbar {
-      width: 7.5px;
-      background-color: transparent;
-    }
-
-    &::-webkit-scrollbar-thumb {
-      display: none;
-      border-radius: 100px;
-      background-color: rgba(0, 0, 0, 0.45);
-    }
-    &:hover::-webkit-scrollbar-thumb {
-      display: block;
+    > div {
+      min-width: 170px;
+      margin-top: 24px;
     }
   }
 }
 .boxItem {
   display: flex;
 }
+
+.dotBtnAlbumDropdown {
+  height: 260px;
+  min-width: 250px;
+  overflow: auto;
+
+  @media screen and (max-width: 767px) {
+    height: 239px;
+  }
+
+  > span {
+    font-size: 12px;
+    cursor: pointer;
+    padding-bottom: 6px;
+    display: flex;
+    justify-content: flex-end;
+    svg {
+      fill: gray;
+    }
+  }
+  > ul {
+    border: 0px;
+
+    > li {
+      min-height: 35px;
+      display: flex;
+      align-items: center;
+      padding: 0px 8px !important;
+
+      > div {
+        padding-left: 12px;
+      }
+
+      > span {
+        margin: 0px;
+      }
+
+      &:hover {
+        background-color: #88d2ec29 !important;
+
+        svg path {
+          fill: var(--primary-color);
+        }
+        div {
+          color: var(--primary-color);
+        }
+      }
+    }
+  }
+}
 .galleryAlbumImage {
   display: flex;
   flex-wrap: wrap;
   padding-top: 20px;
-  margin: 0 14px 14px 14px;
+  margin: 0px 14px 14px 14px !important;
   @media only screen and (max-width: 767px) {
     margin: 0 11px 0 11px;
-    max-width: 414px;
+    max-width: 100%;
   }
   :global {
     .ant-checkbox-wrapper {
-      @media only screen and (max-width: 767px) {
-        width: unset;
-      }
       span {
         padding: unset;
       }
       position: relative;
-      margin-left: 0;
       .ant-checkbox {
-        @media only screen and (max-width: 767px) {
-          top: 10px;
-          left: 15px;
-          padding: unset;
-        }
-        top: 19px;
-        left: 10px;
+        top: 5px;
+        left: 3px;
         position: absolute;
         z-index: 2;
-        display: none;
-      }
-      &:hover .ant-checkbox {
-        display: block;
-      }
-      .showCheck {
-        display: block;
       }
     }
   }
-  .checked {
-    :global {
-      .ant-checkbox {
-        display: block;
-      }
-    }
-  }
+
   .image-preview {
+    height: fit-content;
+    margin-right: 5px;
+    margin-bottom: 5px;
+
     @media only screen and (max-width: 767px) {
       margin-bottom: 5px;
     }
     position: relative;
     .check-wrappers {
-      @media only screen and (max-width: 767px) {
-        top: 5px !important;
-        right: 10px !important;
-      }
+      cursor: pointer;
       position: absolute;
-      right: 15px;
-      top: 15px;
-      visibility: hidden;
+      width: fit-content;
+      top: 0;
+      padding: 10px;
+      display: none;
+      justify-content: space-between;
+      align-items: center;
       svg {
         fill: #000000a6;
       }
-      .imageDotButton {
-        color: red;
-        background-color: red;
-      }
+
       .dotBtn {
-        padding: 3px 10px 0 10px;
+        padding: 3px 11px 0 11px;
         background-color: white;
         border-radius: 50%;
         height: 100%;
-        width: 100%;
+      }
+
+      &:first-child {
+        left: 0px;
+      }
+      &:last-child {
+        right: 0;
       }
     }
     &:hover {
       .check-wrappers {
+        cursor: pointer;
         position: absolute;
-        right: 15px;
-        top: 12px;
-        visibility: visible;
+        display: flex;
         svg {
           fill: #000000a6;
         }
+      }
+    }
+    &.showCheck {
+      .check-wrappers {
+        display: flex;
       }
     }
   }
   .imageAlbum {
     width: 130px;
     height: 130px;
-    margin-right: 5px;
-    margin-bottom: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid lightgray;
+    border: 1px solid #eeeeee;
+    position: relative;
 
     :global .ant-skeleton-image {
-      width: 112px;
-      height: 112px;
+      width: 96px;
+      height: 96px;
     }
     cursor: pointer;
     @media only screen and (max-width: 767px) {
@@ -449,10 +533,6 @@
       border-radius: 4px;
     }
     .sensitive-class {
-      @media only screen and (max-width: 767px) {
-        width: 90px;
-        height: 90px;
-      }
       display: flex;
       flex-direction: column;
       font-size: 14px;
@@ -464,10 +544,11 @@
       transform: translate(-50%, -50%);
       align-items: center;
       justify-content: center;
-      width: 130px;
-      height: 130px;
+      width: 100%;
+      height: 100%;
       z-index: 10;
       background-color: rgba(0, 0, 0, 0.9);
+      border-radius: 4px;
       :global {
         .anticon {
           margin-bottom: 8px;
@@ -796,6 +877,15 @@
         width: 100%;
         color: #3d3d46;
         margin: 5px;
+
+        .active {
+          color: #54b2d3;
+        }
+
+        .inActive {
+          color: #fff;
+        }
+
         .galleryIcon {
           width: 44px;
           height: 44px;
@@ -833,8 +923,30 @@
 .mainLayout {
   display: flex;
   flex-direction: column;
+  position: relative;
+  height: 100%;
+
+  > div:first-child {
+    margin-top: 20px;
+    height: 100%;
+    padding-bottom: 80px;
+  }
+
   .headerMenu {
     padding: 0px 0 0 20px;
+  }
+
+  .pagination {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    > div {
+      padding: 0px;
+
+      > ul {
+        padding-right: 0px;
+      }
+    }
   }
   /* justify-content: center; */
 }
@@ -864,6 +976,49 @@
       }
       .leftItem {
         float: right;
+      }
+
+      &:first-child {
+        border-bottom: 1px solid #ecedf0;
+      }
+      &:last-child {
+        color: red;
+        > span {
+          color: red;
+          > svg {
+            fill: red;
+          }
+        }
+      }
+    }
+
+    > ul {
+      border: 0px;
+
+      > li {
+        min-height: 35px;
+        display: flex;
+        align-items: center;
+        padding: 0px 8px !important;
+
+        > div {
+          padding-left: 12px;
+        }
+
+        > span {
+          margin: 0px;
+        }
+
+        &:hover {
+          background-color: #88d2ec29 !important;
+
+          svg path {
+            fill: var(--primary-color);
+          }
+          div {
+            color: var(--primary-color);
+          }
+        }
       }
     }
   }
@@ -913,6 +1068,8 @@
 }
 .gridViewItemSkeleton {
   margin-top: 0px;
+  padding: 0px;
+
   @media only screen and (max-width: 767px) {
     max-width: 414px;
   }
@@ -935,7 +1092,7 @@
       justify-content: center;
       align-items: center;
       border-radius: 4px;
-      margin: 0 6px 10px 6px;
+      margin: 0 5px 10px 5px;
       border: 1px solid #eee;
     }
   }
@@ -988,7 +1145,7 @@
           tr {
             cursor: pointer;
             &:hover {
-              //background-color: #ECEDF0 !important;
+              background-color: #ecedf0 !important;
             }
             td {
               background: unset;
@@ -1010,6 +1167,7 @@
   }
 }
 .albumListView {
+  height: 100%;
   overflow: auto;
   margin-left: 10px;
   :global {
@@ -1031,6 +1189,7 @@
             }
           }
         }
+
         .ant-table-tbody {
           tr {
             cursor: pointer;
@@ -1051,6 +1210,13 @@
             }
           }
         }
+      }
+    }
+
+    .ant-table-wrapper:last-child {
+      .ant-table-content {
+        min-height: 400px;
+        padding-bottom: 96px;
       }
     }
   }
@@ -1175,14 +1341,26 @@
     }
   }
   p {
-    margin-top: 20px;
-    margin-left: 10px;
-    max-width: 600px;
+    margin: 0px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
   }
   img {
     margin-top: 12px;
+  }
+  > div:last-child {
+    display: flex;
+    align-items: center;
+  }
+}
+
+.column-loader {
+  > div {
+    width: 100%;
+
+    > span {
+      width: 100%;
+    }
   }
 }
