nextjs11 alive baby

--- a/apps/web/pages/login.module.less
+++ b/apps/web/pages/login.module.less
@@ -1,7 +1,7 @@
 .signInWrapper {
   display: flex;
   min-height: 100vh;
-  .signInBackground {
+  .sign-in-background {
     background: #eef7fb;
     flex: 1 50%;
     max-width: 50%;
