--- a/libs/ui/src/lib/image-viewer/CamUploaderModal.module.less
+++ b/libs/ui/src/lib/image-viewer/CamUploaderModal.module.less
@@ -1,13 +1,7 @@
 .fileInput {
   visibility: hidden !important;
 }
-@media only screen and (orientation: portrait) {
-  :global {
-    .ant-modal-wrap {
-      // overflow: hidden;
-    }
-  }
-}
+
 .uppyModal {
   :global {
     .ant-modal-content {
@@ -71,7 +65,7 @@
     }
 
     @media only screen and (orientation: landscape) {
-      // overflow: hidden;
+      overflow: hidden;
       max-width: 100vh;
       min-height: 100vw;
       transform: rotate(90deg);
