--- a/libs/ui/src/lib/gallery-view/GalleryView.module.less
+++ b/libs/ui/src/lib/gallery-view/GalleryView.module.less
@@ -185,6 +185,7 @@
   overflow: auto;
   margin-bottom: 20px;
   height: 100%;
+  width: 100%;
 
   .galleryWrap {
     // display: contents;
@@ -452,8 +453,8 @@
 
   .image-preview {
     height: fit-content;
-    margin-right: 5px;
-    margin-bottom: 5px;
+    margin-right: 15px;
+    margin-bottom: 15px;
 
     @media only screen and (max-width: 767px) {
       margin-bottom: 5px;
@@ -499,6 +500,18 @@
       }
     }
     &:hover {
+      .imageAlbum {
+        background-color: gray;
+        border-radius: 5px;
+        img {
+          opacity: 0.75;
+        }
+
+        > span {
+          display: block;
+        }
+      }
+
       .check-wrappers {
         cursor: pointer;
         position: absolute;
@@ -515,27 +528,50 @@
     }
   }
   .imageAlbum {
-    width: 130px;
-    height: 130px;
+    width: 182px;
+    height: 182px;
     display: flex;
     align-items: center;
     justify-content: center;
     border: 1px solid #eeeeee;
     position: relative;
 
+    > span {
+      display: none;
+      position: absolute;
+      left: 10px;
+      bottom: 10px;
+      background: #ffffff;
+      border: 1px solid #ffffff;
+      box-sizing: border-box;
+      border-radius: 2px;
+      padding: 2px 8px;
+      font-size: 12px;
+    }
+
     :global .ant-skeleton-image {
-      width: 96px;
-      height: 96px;
+      width: 162px;
+      height: 162px;
     }
     cursor: pointer;
     @media only screen and (max-width: 767px) {
-      width: 90px;
-      height: 90px;
+      width: 112px;
+      height: 112px;
       margin: 0px;
+
+      :global .ant-skeleton-image {
+        width: 96px;
+        height: 96px;
+      }
     }
     @media screen and (max-width: 425px) {
       width: 88px;
       height: 88px;
+
+      :global .ant-skeleton-image {
+        width: 76px;
+        height: 76px;
+      }
     }
     @media screen and (max-width: 375px) {
       width: 75px;
@@ -586,15 +622,11 @@
     margin: 0 11px 0 11px;
   }
   .imageAlbum {
-    width: 130px;
-    height: 130px;
     margin-right: 5px;
     margin-bottom: 5px;
     cursor: pointer;
     position: relative;
     @media only screen and (max-width: 767px) {
-      width: 90px;
-      height: 90px;
       margin: 0 2px 4px 2px;
     }
 
