--- a/libs/ui/src/lib/gallery-view/GalleryView.module.less
+++ b/libs/ui/src/lib/gallery-view/GalleryView.module.less
@@ -457,6 +457,11 @@
     margin-bottom: 15px;
 
     @media only screen and (max-width: 767px) {
+      margin-right: 10px;
+      margin-bottom: 10px;
+    }
+    @media only screen and (max-width: 425px) {
+      margin-right: 5px;
       margin-bottom: 5px;
     }
     position: relative;
