resolving-minor-issues

--- a/libs/ui/src/lib/gallery-view/GalleryView.module.less
+++ b/libs/ui/src/lib/gallery-view/GalleryView.module.less
@@ -506,10 +506,11 @@
     }
     &:hover {
       .imageAlbum {
-        background-color: gray;
+        background-color: #000000;
         border-radius: 5px;
         img {
-          opacity: 0.75;
+          opacity: 0.65;
+          cursor: zoom-in;
         }
 
         > span {
