Stable Working Version

--- a/libs/ui/src/styles/antd.less
+++ b/libs/ui/src/styles/antd.less
@@ -109,8 +109,7 @@ strong {
 
 @font-face {
   font-family: 'Circular-Std-Bold';
-  src: url('../assets/fonts/CircularStd-Bold.woff') format('woff'),
-    url('../assets/fonts/CircularStd-Bold.otf') format('otf');
+  src: url('../assets/fonts/CircularStd-Bold.woff') format('woff');
 }
 @font-face {
   font-family: 'Circular-Std-Black';
