Fixed all TO-DOs css, might be some broken stuff but we'll fix as we test

--- a/apps/web/components/Email/readEmail.module.less
+++ b/apps/web/components/Email/readEmail.module.less
@@ -281,14 +281,14 @@
       }
     }
   }
+  :global {
+    .ant-popover-inner-content {
+      padding: 4px 0 10px 0;
+      width: 152px;
+    }
+  }
 }
-//TODO: make this pure!
-// :global {
-//   .ant-popover-inner-content {
-//     padding: 4px 0 10px 0;
-//     width: 152px;
-//   }
-// }
+
 .mailOptionContent {
   font-size: 14px;
   color: #9292a3;
