--- a/apps/web/pages/setup/settings/referral.module.less
+++ b/apps/web/pages/setup/settings/referral.module.less
@@ -67,10 +67,9 @@
 }
 
 @media screen and (max-width: 767px) {
-  //TODO: make this pure!
-  // :global .ant-layout {
-  //   margin: 0 0 20px 0;
-  // }
+  .ant-layout {
+    margin: 0 0 20px 0;
+  }
   .referral-container {
     :global .ant-card-body {
       height: inherit;
