--- a/apps/web/components/Email/index.module.less
+++ b/apps/web/components/Email/index.module.less
@@ -148,6 +148,32 @@
       color: #3d3d46;
     }
   }
+  :global {
+    .ant-radio-group {
+      max-width: 316px;
+      .ant-radio-wrapper {
+        display: flex;
+        white-space: unset;
+        padding: 12px 0 0 0;
+        border-bottom: 1px solid #ecedf0;
+        margin-right: 0;
+        margin: 0 10px;
+        &:last-child {
+          border-bottom: none;
+        }
+        .anticon {
+          margin-right: 6px;
+        }
+        .ant-radio {
+          top: 4px;
+        }
+        // border-bottom: 1px solid lightgrey;
+      }
+    }
+    .ant-pagination {
+      margin-right: 20px !important;
+    }
+  }
 }
 .converstionText {
   font-weight: normal;
@@ -155,30 +181,3 @@
   line-height: 16px;
   color: #9292a3;
 }
-//TODO: make this pure!
-// :global {
-//   .ant-radio-group {
-//     max-width: 316px;
-//     .ant-radio-wrapper {
-//       display: flex;
-//       white-space: unset;
-//       padding: 12px 0 0 0;
-//       border-bottom: 1px solid #ecedf0;
-//       margin-right: 0;
-//       margin: 0 10px;
-//       &:last-child {
-//         border-bottom: none;
-//       }
-//       .anticon {
-//         margin-right: 6px;
-//       }
-//       .ant-radio {
-//         top: 4px;
-//       }
-//       // border-bottom: 1px solid lightgrey;
-//     }
-//   }
-//   .ant-pagination {
-//     margin-right: 20px !important;
-//   }
-// }
