--- a/apps/web/components/Setup/TaxRate/TaxRateComponents.module.less
+++ b/apps/web/components/Setup/TaxRate/TaxRateComponents.module.less
@@ -1,12 +1,3 @@
-//TODO: make this pure!
-// :global {
-//   .ant-table-tbody {
-//     tr td {
-//       padding: 10px 16px !important;
-//     }
-//   }
-// }
-
 .advanceCollapse {
   color: #3d3d46;
   font-size: 16px;
@@ -77,6 +68,13 @@
   :global {
     .ant-table-measure-row {
       display: none;
+    }
+  }
+  :global {
+    .ant-table-tbody {
+      tr td {
+        padding: 10px 16px !important;
+      }
     }
   }
 }
