--- a/apps/web/pages/setup/custom-fields/index.module.less
+++ b/apps/web/pages/setup/custom-fields/index.module.less
@@ -203,66 +203,64 @@
       }
     }
   }
+  :global {
+    .ant-popover-arrow {
+      display: none;
+    }
+    .ant-popover-inner {
+      min-width: 200px;
+      max-height: 160px;
+      overflow-y: auto;
+      padding: 0px !important;
+
+      .ant-popover-inner-content {
+        padding: 0px;
+      }
+
+      .popover-menu {
+        padding: 5px 0px;
+        > div {
+          padding: 5px 16px;
+          font-weight: normal;
+          font-size: 14px;
+          line-height: 22px;
+          color: var(--grey-text-color);
+          cursor: pointer;
+
+          &:hover {
+            background-color: var(--blue-focused-color);
+            color: var(--primary-color);
+          }
+
+          &.active {
+            background-color: var(--blue-focused-color);
+            color: var(--primary-color);
+          }
+
+          &:first-child {
+            margin-top: 0px;
+          }
+          &:last-child {
+            margin-bottom: 0px;
+          }
+        }
+      }
+
+      &::-webkit-scrollbar {
+        width: 12px; /* width of the entire scrollbar */
+      }
+
+      &::-webkit-scrollbar-track {
+        background: transparent; /* color of the tracking area */
+      }
+
+      &::-webkit-scrollbar-thumb {
+        background-color: #c9c9d1; /* color of the scroll thumb */
+        border-radius: 100px; /* roundness of the scroll thumb */
+        border-color: var(--light-color);
+        border-style: solid;
+        border-width: 5px 4px;
+      }
+    }
+  }
 }
-
-//TODO: make this pure!
-// :global {
-//   .ant-popover-arrow {
-//     display: none;
-//   }
-//   .ant-popover-inner {
-//     min-width: 200px;
-//     max-height: 160px;
-//     overflow-y: auto;
-//     padding: 0px !important;
-
-//     .ant-popover-inner-content {
-//       padding: 0px;
-//     }
-
-//     .popover-menu {
-//       padding: 5px 0px;
-//       > div {
-//         padding: 5px 16px;
-//         font-weight: normal;
-//         font-size: 14px;
-//         line-height: 22px;
-//         color: var(--grey-text-color);
-//         cursor: pointer;
-
-//         &:hover {
-//           background-color: var(--blue-focused-color);
-//           color: var(--primary-color);
-//         }
-
-//         &.active {
-//           background-color: var(--blue-focused-color);
-//           color: var(--primary-color);
-//         }
-
-//         &:first-child {
-//           margin-top: 0px;
-//         }
-//         &:last-child {
-//           margin-bottom: 0px;
-//         }
-//       }
-//     }
-
-//     &::-webkit-scrollbar {
-//       width: 12px; /* width of the entire scrollbar */
-//     }
-
-//     &::-webkit-scrollbar-track {
-//       background: transparent; /* color of the tracking area */
-//     }
-
-//     &::-webkit-scrollbar-thumb {
-//       background-color: #c9c9d1; /* color of the scroll thumb */
-//       border-radius: 100px; /* roundness of the scroll thumb */
-//       border-color: var(--light-color);
-//       border-style: solid;
-//       border-width: 5px 4px;
-//     }
-//   }
-// }
