--- a/libs/ui/src/lib/pin-screen/PinScreen.module.less
+++ b/libs/ui/src/lib/pin-screen/PinScreen.module.less
@@ -102,12 +102,19 @@
         justify-content: center;
         align-items: center;
         margin-bottom: 20px;
+        animation-duration: 500ms;
+        &.wrongpw {
+          animation-name: WrongPw;
+        }
         .dot {
           width: 12px;
           height: 12px;
           border: 1px solid #9292a3;
           border-radius: 100%;
           margin: 0 10px;
+          &.active {
+            background-color: #9292a3;
+          }
         }
       }
       .numbers {
@@ -128,8 +135,31 @@
           border: 0;
           background-color: transparent;
           outline: none;
+          height: auto;
+          position: relative;
+          overflow: hidden;
+          user-select: none;
           @media only screen and (max-width: 360px) {
             padding: 15px 28px;
+          }
+          &:after {
+            content: '';
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%) scale(0);
+            width: 65px;
+            height: 65px;
+            background-color: #000000;
+            opacity: 0.5;
+            border-radius: 100%;
+            transition: all 0.3s ease-in-out;
+          }
+          &.active {
+            &:after {
+              animation-name: buttonEffect;
+              animation-duration: 500ms;
+            }
           }
         }
       }
@@ -147,5 +177,33 @@
         color: #54b2d3;
       }
     }
+  }
+}
+
+@keyframes buttonEffect {
+  to {
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(1);
+  }
+}
+
+@keyframes WrongPw {
+  0% {
+    transform: translateX(0);
+  }
+  20% {
+    transform: translateX(-10px);
+  }
+  40% {
+    transform: translateX(10px);
+  }
+  60% {
+    transform: translateX(-10px);
+  }
+  80% {
+    transform: translateX(10px);
+  }
+  100% {
+    transform: translateX(0);
   }
 }
