add loader on load more data

--- a/apps/web/components/Leads/LeadsStages/LeadsStages.module.less
+++ b/apps/web/components/Leads/LeadsStages/LeadsStages.module.less
@@ -92,6 +92,12 @@
       }
     }
   }
+
+  .pre-loader {
+    display: flex;
+    justify-content: center;
+    margin-top: -50px;
+  }
 }
 
 .overlay {
