--- a/libs/ui/src/lib/image-viewer/CamUploaderModal.module.less
+++ b/libs/ui/src/lib/image-viewer/CamUploaderModal.module.less
@@ -457,6 +457,7 @@
           position: absolute;
           top: -10px;
           right: -10px;
+          z-index: 1;
 
           > span {
             line-height: 0px;
