add header in setup page

--- a/apps/web/pages/setup/mobile-setup/index.module.less
+++ b/apps/web/pages/setup/mobile-setup/index.module.less
@@ -150,7 +150,7 @@
       max-width: unset !important;
       min-width: unset !important;
       width: 100% !important;
-      padding: 0 16px;
+      // padding: 0 16px;
     }
     .ant-menu-submenu-title {
       padding: 0 !important;
@@ -174,5 +174,13 @@
   li {
     border-bottom: 1px solid #ecedf0;
     padding: 0 !important;
+  }
+  .header {
+    border-bottom: 1px solid #ecedf0;
+    padding: 16px 16px;
+  }
+  .block {
+    display: inline-block;
+    margin-right: 9px;
   }
 }
