PABAU2-2029:  Medical form listing design changes

--- a/apps/web/components/MedicalForms/Custom.module.less
+++ b/apps/web/components/MedicalForms/Custom.module.less
@@ -5,9 +5,88 @@
       background: #ffffff;
       border-top: 1px solid #f1f1f1;
     }
+    table {
+      @media only screen and (max-width: 767px) {
+        display: block;
+        width: 100% !important;
+      }
+    }
+    .ant-table-thead {
+      @media only screen and (max-width: 767px) {
+        display: none;
+      }
+    }
     .ant-table-tbody {
+      @media only screen and (max-width: 767px) {
+        display: block;
+        padding: 0 16px;
+      }
       tr {
+        position: relative;
         border-bottom: 1px solid #f1f1f1;
+        @media only screen and (max-width: 767px) {
+          background: #ffffff;
+          box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+          border-radius: 4px;
+          margin-top: 20px;
+          padding: 16px;
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: space-between;
+          min-height: 124px;
+          &:first-child {
+            display: none;
+          }
+          td {
+            display: block;
+            padding: 0;
+            width: 100%;
+            border: 0;
+            margin: 0 0 8px;
+            &:first-child {
+              text-align: left;
+              order: 1;
+              max-width: 100%;
+              display: none;
+            }
+            &:nth-child(2) {
+              order: 2;
+              max-width: calc(50% - 5px);
+              font-size: 16px;
+              line-height: 20px;
+              font-weight: 600;
+              color: #3d3d46;
+              text-transform: capitalize;
+            }
+            &:nth-child(3) {
+              order: 4;
+              max-width: 100%;
+              font-size: 14px;
+              line-height: 18px;
+              color: #9292a3;
+              position: unset;
+            }
+            &:nth-child(4) {
+              order: 3;
+              max-width: calc(50% - 5px);
+              color: #9292a3;
+              text-align: right;
+            }
+            &:nth-child(5) {
+              order: 5;
+              max-width: 100%;
+              display: none;
+            }
+            &:nth-child(6) {
+              order: 6;
+              max-width: 100%;
+            }
+            &:nth-child(7) {
+              order: 7;
+              max-width: 100%;
+            }
+          }
+        }
       }
     }
     tr:hover {
@@ -31,7 +110,17 @@
     }
   }
 }
-
+.bgIcon {
+  display: none;
+  @media only screen and (max-width: 767px) {
+    display: block;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 87px;
+    height: 87px;
+  }
+}
 .versionBtn:hover {
   color: #54b2d3;
 }
@@ -51,6 +140,32 @@
   width: 106px;
   text-transform: none;
   height: 24px;
+  @media only screen and (max-width: 767px) {
+    background: transparent;
+    border: 0;
+    padding: 0;
+    line-height: 18px;
+    width: initial;
+    height: initial;
+    margin-left: 8px;
+    position: relative;
+  }
+  &::before {
+    @media only screen and (max-width: 767px) {
+      content: "''" !important;
+      display: block !important;
+      position: absolute;
+      width: 4px;
+      height: 4px;
+      background-color: var(--primary-color);
+      border-radius: 50%;
+      left: -8px;
+      top: 50%;
+      transform: translateY(-50%);
+      opacity: 1;
+      overflow: hidden;
+    }
+  }
 }
 
 .inactive-btn {
